# royal

./: README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml
royal/: course_scraper.py  main.py
