[tool.poetry]
name = "royal"
version = "0.1.0"
description = "An API for UofT."
authors = ["PotatoDiet <me@potatodiet.ca>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
